Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17341

Creator doesn't recover from gdb crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.9.0-beta1
    • Qt Creator 4.2.0-rc1
    • Debugger
    • None
    • Windows 7, GDB 7.8
    • af3834f1eefe3fbfe29c7d612267d82069a0590d 6974b34b86b3609192cfc3d6f01641609568196e

      When GDB crashes, Qt Creator keeps waiting (with a spinning progress in the watches pane).

      Aborting the debugger doesn't help.

      <234-exec-step
      
      dHANDLE GDB ERROR: The gdb process was ended forcefully
      dGDB PROCESS FINISHED, status 1, exit code -1073741819
      dNOTE: ENGINE ILL ******
      dState changed BY FORCE from InferiorRunRequested(10) to InferiorStopRequested(13) [master]
      dATTEMPT TO INTERRUPT INFERIOR
      sStop requested...
      dTRYING TO INTERRUPT INFERIOR
      dInterrupted 12912
      dNOTE: INFERIOR STOP OK
      dNOTE: ... WHILE DYING. 
      dNOTE: ... FORWARDING TO 'STOP OK'. 
      dState changed from InferiorStopRequested(13) to InferiorStopOk(14) [master]
      dState changed from InferiorStopOk(14) to InferiorShutdownRequested(16) [master]
      dQUEUE: SHUTDOWN INFERIOR
      dNOTE: ... IGNORING STOP MESSAGE
      dCALL: SHUTDOWN INFERIOR
      dRUNNING NEEDS-STOP COMMAND kill
      
      dABORTING DEBUGGER. SECOND TIME.
      
      dABORTING DEBUGGER. SECOND TIME.
      
      dABORTING DEBUGGER. SECOND TIME.
      
      dABORTING DEBUGGER. SECOND TIME.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes