Debugger: Gracefully recover from gdb crashes

Fixes: QTCREATORBUG-17341
Change-Id: Icc05b9810269e43ddcf968cf25d5949b3687838d
Reviewed-by: Orgad Shaneh <orgads@gmail.com>